testData/invalid-files/invalid-ann-atoi/pos1.ann
T1	Organization 77 INVALID	YouTube